We are adding the HTML file with the Add file

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 ## TEST DEMO
 
 This is a testing file for the testing demo for the github.
-I will also learn here how we can use it for the Git clone here.
+I will also learn here how we can use it for the Git clone here
+Hello World! 
