--- a/README
+++ b/README
@@ -2,4 +2,8 @@
 
 This is a testing file for the testing demo for the github.
 I will also learn here how we can use it for the Git clone here
-Hello World! 
+Hello World!
+## Development Envoiromnment 
+
+Make sure you have js available
+Run index.html in browser
